<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context=".User.AllCategories">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/back_pressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/back_icon" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/adamina"
            android:padding="10dp"
            android:text="@string/Categories"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/gold"
            android:onClick="callTherapyC">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:padding="25dp"
                android:text="@string/therapy"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/Expand"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/therapy_gold" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:background="#131313"
            android:onClick="callDoctorC">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/beta_doctor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/baloo"
                android:padding="25dp"
                android:text="@string/predictions_disease"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/Expand"
                android:textColor="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:background="@color/Home_background"
            android:onClick="callNewsstand">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:src="@drawable/pref_infog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/baloo"
                android:text="@string/do_tell"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/Expand"
                android:textColor="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:background="#dedde3"
            android:onClick="callLocationC">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:src="@drawable/geographicmap" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/baloo"
                android:padding="8dp"
                android:text="@string/geo_map"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/Expand" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:onClick="callFoodC">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:src="@drawable/food_tip_im" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:padding="15dp"
                android:text="@string/tips_food"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/Expand"
                android:textColor="@color/black" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>