<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.LoginSignup.SignUp"
    android:background="@color/lavender"
    android:padding="30dp"
    android:transitionName="transition_sign_up">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/back_icon"
            android:transitionName="transition_back_arrow_button"/>

        <TextView
            android:id="@+id/create_account_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create\nAccount"
            android:textSize="40sp"
            android:fontFamily="@font/muli_extrabold"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:transitionName="transition_title_text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_fullname"
                android:hint="@string/full_name"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/full_name_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_username"
                android:hint="@string/enter_username"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/username_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_email"
                android:hint="@string/Email_add"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/email_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_password"
                android:hint="@string/login_password_"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/password_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sign_up_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Next_btn"
                android:onClick="callNext2ndSignUpScreen"
                android:background="@color/black"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:elevation="5dp"
                android:transitionName="transition_next"/>

            <Button
                android:id="@+id/sign_up_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:onClick="callLoginScreen"
                android:layout_gravity="center"
                android:background="#00000000"
                android:layout_marginTop="20dp"
                android:elevation="5dp"
                android:transitionName="transition_login"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>